--- a/gobotany/static/sass/_home.scss
+++ b/gobotany/static/sass/_home.scss
@@ -1,7 +1,10 @@
 /* Home */
 
 #home {
-    background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3;
+    background-color: #f3f3c3;
+    background-image: url(/static/images/layout/body-home.jpg);
+    background-position: left 0px top;
+    background-repeat: repeat-x;
     #all {
         background: url(/static/images/layout/content-home-bg.jpg) center 72px no-repeat transparent;
     }
