--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -27,7 +27,10 @@
 /* Site-wide styles */
 
 body {
-    background: #f0f0c0;
+    background-color: #f0f0c0;
+    background-image: url(/static/images/layout/little-plants.png);    
+    background-position: bottom 140px center;
+    background-repeat: no-repeat;
     color: $text-color;
     font-family: $body-font;
     font-size: $base-font-size;
