--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -470,6 +470,26 @@ body.plantshare {
         .restricted {
             margin-left: 14px;
         }
+        .restricted-dialog {
+            background: #fff;
+            color: #000;
+            padding: 20px;
+            height: auto;
+            width: auto;
+            p {
+                margin: 0 0 14px;
+            }
+            .ok {
+                margin: 20px 0 0;
+                text-align: center;
+                a {
+                    color: #fff;
+                    cursor: pointer;
+                    display: inline-block;
+                    width: 80px;
+                }
+            }
+        }
         fieldset {
             margin-bottom: 10px;
         }
