--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -17,8 +17,8 @@
 <div>
     <p><strong>Spotted a plant and want to share it with others? Here's where
         to start!</strong></p>
-    <p><em>Rare plant sightings will not be made visible to others on
-        PlantShare.</em> However, we welcome you to post such sightings.
+    <p><em>Rare plant sightings will not be made visible to others.</em>
+        However, we welcome you to post such sightings.
         We will keep them confidential and use the information for our
         scientific studies.</p>
 </div>
