Switch to a larger, dynamic map for sighting pages. (#491)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -13,7 +13,7 @@
         </p>
 
         {{ form.notes.errors }}
-        <label for="id_notes">Description or comments</label>
+        <label for="id_notes">Comments</label>
         {{ form.notes }}
 
         <div class="images">
