Fix the image on the 'partner' test site and clarify comments. (#507)

--- a/gobotany/site/templates/partner/home.html
+++ b/gobotany/site/templates/partner/home.html
@@ -15,7 +15,9 @@
 
 {% block js_require %}
     {% comment %}
-    Disable the fading image carousel. Show just one unchanging image for now.
+    Optional, if the partner would like to disable the fading image
+    carousel and show just one unchanging image (the first of the images
+    loaded in the Admin.): comment out the JS include like so:
     {% include "gobotany/_home_js_require.html" %}
     {% endcomment %}
 {% endblock %}
