Add a new section and document to the Teaching page as requested.

--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -31,7 +31,20 @@
     <ul>
 
     <li>
-    <p class="new">New</p>
+    <p class="new">New</p>    
+    <h3><a
+        href="/static/docs/next-generation-science-standards-for-go-botany.pdf"
+        >Next-Generation Science Standards</a></h3>
+    <p class="meta">PDF, 365 kB. Posted July 2013</p>
+    <p>James Sirch of the <a href="http://peabody.yale.edu/">Yale Peabody
+        Museum of Natural History</a> in New Haven,
+    Connecticut, provides a useful overview of how Go Botany can help teachers
+    and students meet new Next-Generation Science Standards. See also the
+    <a href="http://www.nextgenscience.org/">Next Generation Science
+        Standards</a> web site.</p>
+    </li>
+
+    <li>
     <h3><a
         href="/static/docs/Common-Core-ELS-for-Science-GoBotany.pdf"
         >Common Core English Language Standards for Science:
@@ -40,16 +53,15 @@
     <p>
     James Sirch of the <a href="http://peabody.yale.edu/">Yale Peabody
         Museum of Natural History</a> in New Haven,
-    Connecticut, provides a useful overview of how Go Botany can help teachers
-    and students meet new national standards for English Language Arts
-    Literacy (also see
-    <a href="http://www.corestandards.org/ELA-Literacy">corestandards.org/ELA-Literacy</a>
-    for more information).
+    Connecticut, contributes a useful list outlining how Go Botany can help
+    teachers and students meet new national standards for English Language
+    Arts Literacy. See also the
+    <a href="http://www.corestandards.org/ELA-Literacy">Common Core
+        State Standards Initiative</a> web site.
     </p>
     </li>
 
     <li>
-    <p class="new">New</p>
     <h3><a
         href="/static/docs/Go-Botany-Quiz-Cards.pdf"
         >Go Botany Plant Quiz Cards</a></h3>
