Make the Cancel link on the Terms screen log the user out. (#364)

--- a/gobotany/plantshare/templates/terms_of_agreement.html
+++ b/gobotany/plantshare/templates/terms_of_agreement.html
@@ -54,7 +54,7 @@
         </fieldset>
         </div>
         <input type="submit" class="agree-btn inactive" value="I Agree">
-        <a href=#">Cancel</a>
+        <a href="{% url 'django.contrib.auth.views.logout' %}">Cancel</a>
     </form>
 {% endblock %}
 
