Edit message on logout page so it works with the Cancel link. (#364)

--- a/gobotany/plantshare/templates/registration/logout.html
+++ b/gobotany/plantshare/templates/registration/logout.html
@@ -11,7 +11,7 @@
 {% block main_content %}
 <h1>Logged Out</h1>
 
-<p>You have logged out of PlantShare and may now close this
+<p>You are logged out of PlantShare and may now close this
 browser window.</p>
 
 <p><a href="{% url 'ps-main' %}">Log in</a> again anytime!</p>
