Remove the disabled Invite to Group button until Groups are added. (#508)

--- a/gobotany/plantshare/templates/find_people.html
+++ b/gobotany/plantshare/templates/find_people.html
@@ -58,8 +58,10 @@
                         </li>
                     {% endif %}
                 </ul>
+                {% comment %}
                 <p><a href="#" class="orange-button caps disabled">Invite to
                     Group</a></p>
+                {% endcomment %}
             </li>
         {% endfor %}
         </ul>
