Revise PlantShare Terms text based on prior team feedback. (#364)

--- a/gobotany/plantshare/templates/terms_of_agreement.html
+++ b/gobotany/plantshare/templates/terms_of_agreement.html
@@ -29,28 +29,32 @@
             <!-- Limit the length of each label to be no more than three
                  lines long when viewed in a browser. -->
             <input type="checkbox" id="box1" name="terms" value="terms1">
-            <label for="box1">New England Wild Flower Society can use any 
-                content submitted, but will credit the submitter.</label>
+            <label for="box1">
+                You agree to be a good PlantShare citizen,
+                acting in a respectful and courteous manner toward others.
+                Bullying, spamming, posting rude content, or other abusive
+                behavior is strictly forbidden.
+            </label>
             <input type="checkbox" id="box2" name="terms" value="terms2">
-            <label for="box2">New England Wild Flower Society reserves the
-                right to end the membership of anyone engaged in
-                bullying behavior on PlantShare.
-                A good PlantShare citizen acts in a
-                respectful and courteous manner towards other members.
-                Bullying or other abusive behavior is strictly forbidden.            
+            <label for="box2">
+                You retain copyright of content you create, including photos,
+                and you grant New England Wild Flower Society permission to
+                display it. You agree not to post others'
+                content without their permission.
             </label>
             <input type="checkbox" id="box3" name="terms" value="terms3">
-            <label for="box3">Postings of locations of endangered plants
-                for species deemed at risk from collection or
-                trampling will not be shown publicly. New England Wild Flower
-                Society strongly supports also reporting endangered
-                plant species to state Natural Heritage Programs, to add to
-                scientific understanding.</label>
+            <label for="box3">
+                Any posts of sightings of plants that are listed as rare
+                or vulnerable will be screened from public
+                view for protection. We encourage also reporting
+                such sightings to state Natural Heritage Programs.
+            </label>
             <input type="checkbox" id="box4" name="terms" value="terms4">
-            <label for="box4">By posting a sighting, you acknowledge that
-                you have obtained the permission of the landowner of the
-                property on which a plant was seen and that no laws have been
-                broken.</label>
+            <label for="box4">
+                You must secure landowner permission before posting any
+                images or information about plants  seen on private
+                property.
+            </label>
         </fieldset>
         </div>
         <input type="submit" class="agree-btn inactive" value="I Agree">
