--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -75,6 +75,6 @@
             <input type="submit" class="save-btn" value="Save"
                 alt="Save Changes">
         {% else %}
-            <input type="submit" class="post-sighting-btn"
-            alt="Post a Sighting">
+            <input type="submit" class="post-sighting-btn inactive"
+            disabled alt="Post a Sighting">
         {% endif %}
